--- a/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.html
@@ -1,5 +1,10 @@
 <div class="angle-filter">
-
+	<div class="north-container"
+		 [style.transform]="'rotate(' + rotation + 'rad)'">
+		<div class="north">
+			N
+		</div>
+	</div>
 	<div class="circle">
 		<p class="point">
 			<i class="icon-pin-point"></i>
@@ -16,7 +21,7 @@
 	</div>
 	<div class="rectangles">
 		<button (click)="nextOverlay($event, true)"
-			[disabled]="!overlay">
+				[disabled]="!overlay">
 			<i class="icon-angle-next"></i>
 		</button>
 		<button (click)="nextOverlay($event, false)"
