--- a/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.html
@@ -1,4 +1,4 @@
-<div class="angle-filter">
+<div class="angle-filter" *ngIf="_show">
 	<div class="north-container"
 		 [style.transform]="'rotate(' + rotation + 'rad)'">
 		<div class="north">
