--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -23,7 +23,7 @@
 <ul class="annotations-options">
 
 	<li *ngFor="let annotationMode of ANNOTATION_MODE_LIST"
-		[class.mode-on]="mode === annotationMode"
+		[class.mode-on]="isActive(annotationMode)"
 		(click)="setAnnotationMode(annotationMode)"
 		[class.disabled]="!isAnnotationEnable(annotationMode)">
 		<span
