--- a/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.html
@@ -1,5 +1,5 @@
 <div *ngIf='long && isVisible'
-	 [class.mouse-coordinate]="long && isVisible"
+	 class="mouse-coordinate"
 	 [ngSwitch]="floationgSystem">
 
 	<ansyn-geo-holder *ngSwitchCase="'WGS84'"
