--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.less
@@ -57,8 +57,14 @@
 		background-color: rgba(0, 0, 0, 0.3);
 		color: white;
 		align-self: center;
+		white-space: pre-wrap;
+
 		&:hover:not(:disabled) {
 			background: rgba(0, 0, 0, 0.5);
+		}
+
+		&.rtl {
+			direction: rtl;
 		}
 	}
 
