--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.less
@@ -6,60 +6,73 @@ div.container {
 	padding: 13px;
 
 	div.title-row {
+		display: flex;
+		flex-direction: row;
 		padding: 5px 0 10px 0;
 
-		span.title {
-			font-family: @app-font;
-			font-style: normal;
-			font-weight: bold;
-			font-size: 14px;
-			line-height: 100%;
-			color: #FFFFFF;
-			opacity: 1;
+		div.filter-title {
 
-			&.title-disabled {
-				opacity: 0.5
+			&.rtl {
+				direction: rtl;
+			}
+
+			display: flex;
+			flex-direction: row;
+			font-family: @app-font;
+			line-height: 100%;
+			color: @background-color-12;
+
+			span.title {
+				font-style: normal;
+				font-weight: bold;
+				font-size: 14px;
+				opacity: 1;
+
+				&.title-disabled {
+					opacity: 0.5
+				}
+			}
+
+			span.filtered {
+				font-style: italic;
+				font-weight: normal;
+				font-size: 12px;
+				padding-left: 4px;
+				padding-right: 4px;
 			}
 		}
 
-		span.filtered {
-			font-family: @app-font;
-			font-style: italic;
-			font-weight: normal;
-			font-size: 12px;
-			line-height: 100%;
-			color: #FFFFFF;
-			padding-left: 4px;
-			padding-right: 4px;
-		}
+		div.filter-title-buttons {
+			margin-left: auto;
 
-		button.down-arrow {
-			width: 10px;
-			height: 10px;
-			padding: 0;
-			background: transparent;
-			border: none;
-			border-bottom: 2px solid #FFFFFF;
-			border-left: 2px solid #FFFFFF;
-			float: right;
-			margin-right: 10px;
-			margin-top: 2px;
-			cursor: pointer;
-			outline: none;
+			button.down-arrow {
+				width: 10px;
+				height: 10px;
+				padding: 0;
+				background: transparent;
+				border: none;
+				border-bottom: 2px solid #FFFFFF;
+				border-left: 2px solid #FFFFFF;
+				float: right;
+				margin-right: 10px;
+				margin-top: 2px;
+				cursor: pointer;
+				outline: none;
 
-			&:disabled {
-				opacity: 0.7;
+				&:disabled {
+					opacity: 0.7;
+				}
 			}
-		}
 
-		div.show-all {
-			float: right;
-			font-size: 10px;
-			font-style: normal;
-			color: rgba(255, 255, 255, 0.75);
-			margin-top: 3px;
-			margin-right: 7px;
-			cursor: pointer;
+			div.show-all {
+				float: right;
+				font-size: 10px;
+				font-style: normal;
+				color: rgba(255, 255, 255, 0.75);
+				margin-top: 3px;
+				margin-right: 7px;
+				cursor: pointer;
+			}
 		}
 	}
 
