Fixing the hundrdth-ones animation
The animation was missin the 'animation-fill-mode: forwards' attribute so the element did not retain the animation last frame.

--- a/src/app/@ansyn/ansyn/assets/app-loader/app-loader.css
+++ b/src/app/@ansyn/ansyn/assets/app-loader/app-loader.css
@@ -42,6 +42,7 @@
 
 .time-part.hundredths.ones .digit-wrapper {
 	animation-name: hundredths-ones;
+	animation-fill-mode: forwards;
 	animation-duration: 0.2s;
 	animation-iteration-count: 10
 }
