get rotation from active map

--- a/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.html
@@ -1,6 +1,6 @@
 <div class="angle-filter" *ngIf="_show">
 	<div class="north-container"
-		 [style.transform]="'rotate(' + rotation + 'rad)'">
+		 [style.transform]="'rotate(' + mapRotation + 'deg)'">
 		<div class="north">
 			N
 		</div>
