--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
@@ -29,4 +29,5 @@
 	</ng-template>
 </div>
 
+<ansyn-loader [show]="isExporting" [loaderText]="'Exporting Maps' | translate" [rtl]="'rtl' === ('direction' | translate)"></ansyn-loader>
 <ansyn-welcome-notification *ngIf="showWelcomeNotification$ | async"></ansyn-welcome-notification>
