fix translate annotation

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
@@ -7,7 +7,7 @@
 			<ul class="buttons">
 				<li>
 					<button [class.active]="getFeatureProps(featureId)?.editMode"
-					(click)="annotations.editAnnotationMode(featureId)">
+					(click)="toggleEditMode(featureId)">
 						<i [attr.tooltip-value]="'Edit' | translate" tooltip-class="bottom">
 							<svg>
 								<path [attr.d]="SVGICON.editModeSvg"></path>
