add condition to disable edit button for non editable annotations

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
@@ -7,6 +7,7 @@
 			<ul class="buttons">
 				<li *ngIf="getFeatureProps(featureId)?.label?.text.length">
 					<button [class.active]="annotations.edited?.originalFeature?.getId() === featureId"
+							[class.disabled]="isFeatureNonEditable(featureId)"
 							(click)="annotations.editFeature(featureId)"
 							>
 						<i [attr.tooltip-value]="'Edit' | translate" tooltip-class="bottom">
