--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
@@ -5,26 +5,31 @@
 	<p>{{'Measure Distance' | translate}}</p>
 
 	<div class="buttons">
-		<button id="showLayerBtn"
+		<button id="showLayerBtn" class="bold-on-hover"
 				[class.active]="measureData?.isLayerShowed"
 				(click)="toggleShowLayer()">
-			<span class="bold-on-hover">{{'Hide / Show Layer' | translate}}</span>
+			{{'Hide / Show Layer' | translate}}
 		</button>
 
-		<button id="startMeasureBtn"
+		<button id="startMeasureBtn" class="bold-on-hover"
 				[class.active]="measureData?.isToolActive"
 				(click)="toggleMeasureToolActivation()">
-			<span class="bold-on-hover">{{'Stop / Start Measure' | translate}}</span>
+			{{'Stop / Start Measure' | translate}}
 		</button>
 
-		<button id="clearBtn"
+		<button id="removeSingleMeasureBtn" class="bold-on-hover"
+				[class.active]="measureData?.isRemoveMeasureModeActive"
+				(click)="toggleRemoveSingleMeasure()">
+			{{'Remove One Measurement' | translate}}
+		</button>
+
+		<button id="clearBtn" class="bold-on-hover"
 				(click)="clearMeasure()">
-			<span class="bold-on-hover">{{'Clear' | translate}}</span>
+			{{'Clear' | translate}}
 		</button>
 
-		<button id="doneBtn"
-				(click)="done()">
-			<span class="bold-on-hover">{{'Done' | translate}}</span>
+		<button id="doneBtn" class="bold-on-hover"
+				(click)="done()">{{'Done' | translate}}
 		</button>
 	</div>
 </div>
