--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/color-picker/color-picker.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/color-picker/color-picker.component.html
@@ -12,7 +12,7 @@
 		<div class="color" [style.background]="color"></div>
 	</label>
 
-	<button class="no-fill" [disabled]="activeDisabled" (click)="activeChange.emit(!active)">
+	<button class="no-fill" [disabled]="activeDisabled" (click)="changeActive()">
 		<i *ngIf="active; else notactive">
 			<svg fill="#fff" width="32" height="32" viewBox="0 0 1024 1024">
 				<path
