--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
@@ -76,9 +76,8 @@
 							[show]="selectedTab[featureId] === Tabs.Colors"
 							[properties]="getFeatureProps(featureId)?.style?.initial"
 							[fillModeActive]="getFeatureProps(featureId)?.mode !== 'Arrow' && getFeatureProps(featureId)?.mode !== 'LineString'"
-							[canToggleFillMode]="getFeatureProps(featureId)?.mode !== 'Point'"
+							[canToggle]="getFeatureProps(featureId)?.mode !== 'Point' && getFeatureProps(featureId)?.mode !== 'Arrow' && getFeatureProps(featureId)?.mode !== 'LineString'"
 							[strokeModeActive]="getFeatureProps(featureId)?.mode !== 'Point'"
-							[canToggleStrokeMode]="getFeatureProps(featureId)?.mode !== 'Arrow' && getFeatureProps(featureId)?.mode !== 'LineString'"
 							(colorChange)="colorChange($event, featureId)"
 							(activeChange)="activeChange($event, featureId)"
 						></ansyn-annotations-color>
