--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.html
@@ -5,7 +5,7 @@
 		[color]="properties.fill"
 		[active]="properties['fill-opacity'] && fillModeActive"
 		[activeDisabled]="!(properties['stroke-opacity'])"
-		[canToggle]="this.canToggle"
+		[canToggle]="fillModeActive && strokeModeActive"
 		(activeChange)="activeChange.emit({event: $event, label: 'fill'})"
 		(colorChange)="colorChange.emit([{event: $event, label: 'fill'}, {event: $event, label: 'marker-color'}])">
 	</ansyn-color-picker>
@@ -14,8 +14,8 @@
 		[label]="'Stroke' | translate"
 		[color]="properties.stroke"
 		[active]="properties['stroke-opacity'] && strokeModeActive"
-		[activeDisabled]= "!(properties['fill-opacity'])"
-		[canToggle]="canToggle"
+		[activeDisabled]="!(properties['fill-opacity'])"
+		[canToggle]="fillModeActive && strokeModeActive"
 		(colorChange)="colorChange.emit([{event: $event, label: 'stroke'}])"
 		(activeChange)="activeChange.emit({event: $event, label: 'stroke'})">
 	</ansyn-color-picker>
