--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/color-picker/color-picker.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/color-picker/color-picker.component.html
@@ -13,8 +13,9 @@
 	</label>
 
 	<button class="no-fill"
-			[class.disabled]="!canToggle || activeDisabled"
-			[disabled]="activeDisabled || !canToggle" (click)="this.activeChange.emit(!this.active)">
+			[class.disabled]="activeDisabled || !canToggle"
+			[disabled]="activeDisabled || !canToggle"
+			(click)="this.activeChange.emit(!this.active)">
 		<i *ngIf="active; else notactive">
 			<svg fill="#fff" width="32" height="32" viewBox="0 0 1024 1024">
 				<path
