--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
@@ -6,9 +6,9 @@
 		<div class="context-menu" [style.outline-color]="getFeatureProps(featureId)?.style?.initial?.stroke">
 			<ul class="buttons">
 				<li>
-					<button [class.active]="getFeatureProps(featureId)?.editMode"
+					<button [class.active]="annotations?.currentAnnotationEdit?.originalFeature?.getId() === featureId"
 							[class.disabled]="isFeatureNonEditable(featureId)"
-							(click)="annotations.editAnnotationMode(featureId)">
+							(click)="toggleEditMode(featureId)">
 						<i [attr.tooltip-value]="'Edit' | translate" tooltip-class="bottom">
 							<svg>
 								<path [attr.d]="SVGICON.editModeSvg"></path>
