Calculation is nearly ok, but there are change detection errors. I am pausing in order to refactor the annotations context menu.

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
@@ -4,7 +4,7 @@
 		 [ngStyle]="calcBoundingRect(featureId)">
 
 		<div class="context-menu" [style.outline-color]="getFeatureProps(featureId)?.style?.initial?.stroke">
-			<ul class="buttons">
+			<ul class="buttons" [style.right.px]="calcButtonsPanelRight()">
 				<li>
 					<button [class.active]="getFeatureProps(featureId)?.editMode"
 							[class.disabled]="isFeatureNonEditable(featureId)"
