--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-context-menu-buttons/annotations-context-menu-buttons.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-context-menu-buttons/annotations-context-menu-buttons.component.less
@@ -49,7 +49,7 @@
 			flex-direction: column;
 			position: absolute;
 			top: 35px;
-			left: 0px;
+			left: 0;
 			overflow: hidden;
 			padding: 0;
 			margin: 0;
@@ -77,6 +77,18 @@
 	}
 
 	p {
-		margin: 0px;
+		margin: 0;
 	}
+
+	svg {
+		width: 32px;
+		height: 32px;
+		fill: #ffffff;
+	}
+
+	i {
+		font-style: normal;
+		display: inherit;
+	}
+
 }
