--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-context-menu-buttons/annotations-context-menu-buttons.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-context-menu-buttons/annotations-context-menu-buttons.component.html
@@ -1,19 +1,18 @@
 <div>
 	<button [class.active]="annotations?.currentAnnotationEdit?.originalFeature?.getId() === featureId"
 			[class.disabled]="isFeatureNonEditable"
-			(click)="toggleEditMode(featureId)">
+			(click)="toggleEditMode()">
 		<i [attr.tooltip-value]="'Edit' | translate" tooltip-class="bottom">
 			<svg>
 				<path [attr.d]="SVGICON.editModeSvg"></path>
 			</svg>
 		</i>
 	</button>
-
-
 </div>
+
 <div>
-	<button [class.active]="featureProps?.showMeasures"
-			(click)="toggleMeasures(featureId)">
+	<button [class.active]="getFeatureProps()?.showMeasures"
+			(click)="toggleMeasures()">
 		<i [attr.tooltip-value]="'Measures' | translate" tooltip-class="bottom">
 			<svg fill="#fff">
 				<path [attr.d]="SVGICON.measureSvg"></path>
@@ -21,29 +20,30 @@
 		</i>
 	</button>
 </div>
+
 <div>
 	<button [class.active]="selectedTab[featureId] === Tabs.Label"
-			(click)="selectTab(featureId, Tabs.Label)">
+			(click)="selectTab(Tabs.Label)">
 		<i [attr.tooltip-value]="'Label' | translate" tooltip-class="bottom">
 			<svg>
 				<path [attr.d]="SVGICON.labelSvg"></path>
 			</svg>
 		</i>
 	</button>
-
 	<ansyn-annotation-label *ngIf="selectedTab[featureId] === Tabs.Label"
-							[label]="featureProps?.label"
+							[label]="getFeatureProps()?.label"
 							[labelSize]="annotations.idToEntity.get(featureId)?.originalEntity.labelSize"
-							[translateOn]="featureProps?.labelTranslateOn"
-							(onChangeText)="updateLabel($event, featureId)"
-							(onChangeSize)="updateLabelSize($event, featureId)"
+							[translateOn]="getFeatureProps()?.labelTranslateOn"
+							(onChangeText)="updateLabel($event)"
+							(onChangeSize)="updateLabelSize($event)"
 							(onTranslateClick)="annotations.labelTranslateMode(featureId)">
 	</ansyn-annotation-label>
 </div>
+
 <div class="expanded-selection line-width-selection">
 	<p>
 		<button [class.active]="selectedTab[featureId] === Tabs.Weight"
-				(click)="selectTab(featureId, Tabs.Weight)">
+				(click)="selectTab(Tabs.Weight)">
 			<i [attr.tooltip-value]="'Width' | translate" tooltip-class="bottom">
 				<svg>
 					<path [attr.d]="SVGICON.editWeightSvg"></path>
@@ -52,16 +52,17 @@
 		</button>
 		<ansyn-annotations-weight
 			[show]="selectedTab[featureId] === Tabs.Weight"
-			[properties]="featureProps?.style?.initial"
+			[properties]="getFeatureProps()?.style?.initial"
 			(selectLineStyle)="selectLineWidth($event, featureId)">
 		</ansyn-annotations-weight>
 	</p>
 </div>
+
 <div>
 	<p>
 		<button [class.active]="selectedTab[featureId] === Tabs.Colors"
 				[class.disabled]="isFeatureNonEditable"
-				(click)="selectTab(featureId, Tabs.Colors)">
+				(click)="selectTab(Tabs.Colors)">
 			<i [attr.tooltip-value]="'Color' | translate" tooltip-class="bottom">
 				<svg>
 					<path [attr.d]="SVGICON.editColorSvg"></path>
@@ -70,16 +71,17 @@
 		</button>
 		<ansyn-annotations-color
 			[show]="selectedTab[featureId] === Tabs.Colors"
-			[properties]="featureProps?.style?.initial"
+			[properties]="getFeatureProps()?.style?.initial"
 			[fillModeActive]="featureProps?.mode !== 'Arrow' && featureProps?.mode !== 'LineString'"
 			[strokeModeActive]="featureProps?.mode !== 'Point'"
-			(colorChange)="colorChange($event, featureId)"
-			(activeChange)="activeChange($event, featureId)"
+			(colorChange)="colorChange($event)"
+			(activeChange)="activeChange($event)"
 		></ansyn-annotations-color>
 	</p>
 </div>
+
 <div *ngIf="!featureProps?.undeletable">
-	<button class='removeFeature' (click)="removeFeature(featureId)"
+	<button class='removeFeature' (click)="removeFeature()"
 			[class.disabled]="isFeatureNonEditable"
 	>
 		<i [attr.tooltip-value]="'Delete' | translate" tooltip-class="bottom">
