--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
@@ -20,6 +20,7 @@
 				</li>
 				<li>
 					<button [class.active]="getFeatureProps(featureId)?.showMeasures"
+							[class.disabled]="getFeatureProps(featureId)?.mode === 'Point'"
 							(click)="toggleMeasures(featureId)">
 						<i [attr.tooltip-value]="'Measures' | translate" tooltip-class="bottom">
 							<svg fill="#fff">
