--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-context-menu-buttons/annotations-context-menu-buttons.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-context-menu-buttons/annotations-context-menu-buttons.component.less
@@ -15,6 +15,7 @@
 	margin: 0;
 	padding: 2px;
 	transform: translate(calc(~'100% + 15px'), -12px);
+	transition: right 0.2s;
 
 	button {
 		background-color: @background-color-3;
