Trying to implement a similar method with annotations-color component

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.html
@@ -1,4 +1,4 @@
-<div class="list color-selection-expand" *ngIf="show">
+<div class="list color-selection-expand" *ngIf="show" [ngStyle]="getStyle()">
 
 	<ansyn-color-picker
 		[label]="'Fill' | translate"
